--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
-altair
-pandas
+langchain
+PyPDF2
+python-dotenv
 streamlit
+openai
+faiss-cpu
+altair
+tiktoken
+pyngrok
+InstructorEmbedding
+sentence_transformers
+webdriver_manager
+# uncomment to use huggingface llms
+# huggingface-hub==0.14.1
+
+# uncomment to use instructor embeddings
+# InstructorEmbedding==1.0.1
+# sentence-transformers==2.2.2
